2007-09-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-monitor.[ch]:
	Use gio to implement file monitoring.

2007-09-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Read info for new files 

2007-09-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Implement get_file_info using gio

2007-09-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Read directory list via gio instead of gnome-vfs
	
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Get is_hidden & is_backup from gio instead of doing
	filename matching ourselves.

        * libnautilus-private/nautilus-file-utilities.c:
	Remove unused hidden/backup pattern matching.
	
        * src/nautilus-main.c:
	Initiate GThreads, as we need this for gio async emulation.

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.c:
	Fix typo in attribute name
	
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Make NautilusFile info update use GFileInfo.
	Update all call sites to convert to it.

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
        Add gnome_vfs_file_info_to_gio

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-metafile-monitor.c:
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c: